--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            perspective: 200px;
