--- a/index.html
+++ b/index.html
@@ -28,3 +28,4 @@
             height: 80px;
             background-color: #e74c3c;
             margin: 0 5px;
+            transform-origin: 50% 100%;
