--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@
             background-color: #e74c3c;
             margin: 0 5px;
             transform-origin: 50% 100%;
+            animation: rotateBar 1.5s infinite ease-in-out;
