--- a/index.html
+++ b/index.html
@@ -70,3 +70,4 @@
     <div class="complex-spinner">
         <div class="bar"></div>
         <div class="bar"></div>
+        <div class="bar"></div>
