--- a/index.html
+++ b/index.html
@@ -71,3 +71,4 @@
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
+        <div class="bar"></div>
